重写尾迹渲染脚本，放弃Unity自带TrailRenderer，采用HighSpeedTrailRenderer，解决高速物理运算下因为反弹造成的尾迹点缺失问题

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -78,6 +78,7 @@
      <Compile Include="Assets\Scripts\AssemblyWorkshop\WorkshopInitializer.cs" />
      <Compile Include="Assets\Scripts\BulletHoleProjector.cs" />
      <Compile Include="Assets\Scripts\Bullets\Cartridge.cs" />
+     <Compile Include="Assets\Scripts\Bullets\HighSpeedTrailRenderer.cs" />
      <Compile Include="Assets\Scripts\Bullets\Projectile.cs" />
      <Compile Include="Assets\Scripts\Bullets\Shell.cs" />
      <Compile Include="Assets\Scripts\CameraFadeIn.cs" />
